--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello, Bootstrap</h1>
-    <a href="dashboard/index.html">Dashboard</a>
-    <script src="bootstrap/js/bootstrap.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <img class="img-fluid" src="res/images/mapBg.jpg" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="message"></div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
