--- a/index.html
+++ b/index.html
@@ -1,26 +1,290 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Premier Provider of Concrete Services in Metford & SJ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <meta name="description" content="A premier provider of concrete services for the Medford and SJ area. Dedicated to customer satisfaction as well as quality workmanship at fair prices.">
+    <link rel="icon" type="image/x-icon" href="res/images/favicon.png">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="fonts.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="responsive.css" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello, Bootstrap</h1>
+  <body class="roboto-regular">
+    <div class="navigation">
+      <nav>
+        <ul>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Home</span><img class="nav-icon" src="res/images/houseIcon.svg"></div></a></li>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Star</span><img class="nav-icon" src="res/images/starIcon.svg"></div></a></li>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Info</span><img class="nav-icon" src="res/images/infoI.svg"></div></a></li>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Contact</span><img class="nav-icon" src="res/images/mailIcon.svg"></div></a></li>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Facebook</span><img class="nav-icon" src="res/images/facebookF.svg"></div></a></li>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Twitter</span><img class="nav-icon" src="res/images/twitterLogo.svg"></div></a></li>
+          <li><a href="#"><div class="input-group"><span class="nav-text">Google+</span><img class="nav-icon" src="res/images/googlePlus.svg"></div></a></li>
+        </ul>
+      </nav>
+    </div>
+     <!-- Header Section -->
+     <div class="header-section">
+      <div class="container">
+        <div class="row">
+            <img class="hero-head-icon" src="res/images/redTriangle.svg" >
+      <img class="hero-logo mb-4" src="res/images/redStarLogo.svg" />
+      <h1 class="main-text hero-text shaded white roboto-condensed-medium mb-2" data-text="J.D. James Construction">J.D. James Construction</h1>
+      <h2 class="sub-text hero-sub-text roboto-condensed-light">Concrete Contractor</h2>
+      <p class="phone-number hero-phone-number roboto-condensed-medium shaded red mt-5 mb-0" data-text="609.864.3888">609.864.3888</p>
+      <button class="btn btn-primary hero-btn roboto-condensed-regular">Let's Get Started</button>
+        </div>
+      </div>
+  </div>
+
+  <!-- Quote Section -->
+  <div class="quote-section">
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <img class="img-fluid" src="res/images/mapBg.jpg" />
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="message"></div>
+            <div class="col d-flex justify-content-center">
+                <div class="quote-container">
+                    <p class="sub-text shaded white roboto-condensed-light mb-2" data-text="From beginning to end">From beginning to end</p>
+                    <p class="main-text shaded white roboto-condensed-medium" data-text="we never compromise on quality.">we never compromise on quality.</p>
+                    <p class="sub-text shaded white roboto-condensed-light text-end mb-0">- J.D. James</p>
+                </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+  </div>
+
+  <!-- Projects Section -->
+   <div class="projects-section">
+  <div class="container">
+      <div class="section-header d-flex justify-content-md-center flex-md-row flex-column align-content-center mb-md-4 mb-0">
+        <h2 class="main-text shaded-right red roboto-condensed-medium d-flex align-items-center d-flex align-items-md-center justify-content-md-end justify-content-center project-title" data-text="Projects">Projects</h2>
+        <div class="border mx-md-4 my-3"></div>
+        <div class="project-subtext py-sm-0 d-flex flex-column align-items-center align-items-md-start">
+            <p class="roboto-condensed-regular white m-0">SERVING</p>
+            <p class="sub-text roboto-condensed-medium shaded white m-0" data-text="MEDFORD & SOUTH JERSEY">MEDFORD & SOUTH JERSEY</p>
+            <div class="d-flex flex-row">
+                <p class="small-text roboto-condensed-regular mb-0">FOR<br>OVER</p>
+                <p class="sub-text roboto-condensed-medium shaded white" data-text="25 Years">25 Years</p>
+            </div>
+        </div>
+      </div>
+      <div class="row py-lg-4">
+          <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-3 py-2">
+              <div class="card rounded-0">
+                  <img src="res/images/sidewalk1.jpg" class="card-img-top rounded-0" alt="Project Image"> <!-- Replace with your image path -->
+                  <div class="card-body d-flex flex-column justify-content-center">
+                      <p class="card-title title-text roboto-medium">
+                        Black and pewter gray paver sidewalk
+                      </p>
+                      <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                      <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-3 py-3">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk2.jpg" class="card-img-top rounded-0" alt="Project Image">
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-2 py-2">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk3.jpg" class="card-img-top rounded-0" alt="Project Image">
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-2 py-3">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk4.jpg" class="card-img-top rounded-0" alt="Project Image"> 
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-3 py-2">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk5.jpg" class="card-img-top rounded-0" alt="Project Image"> 
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-3 py-3">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk6.jpg" class="card-img-top rounded-0" alt="Project Image"> 
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-2 py-2">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk7.jpg" class="card-img-top rounded-0" alt="Project Image"> 
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-xs-1 py-lg-0 py-md-2 py-3">
+            <div class="card rounded-0">
+                <img src="res/images/sidewalk8.jpg" class="card-img-top rounded-0" alt="Project Image"> 
+                <div class="card-body d-flex flex-column justify-content-center">
+                    <p class="card-title title-text roboto-medium">
+                      Black and pewter gray paver sidewalk
+                    </p>
+                    <p class="card-text">Brick paver sidewalk, brick paver border, sealed brick pavers, etc.</p>
+                    <div class="text-center"><a href="#" class="project-link white">view</a></div>
+                </div>
+            </div>
+        </div>
+      </div>
+  </div>
+</div>  
+
+  <!-- About Section -->
+  <div class="about-section">
+    <div class="container">
+      <div class="row">
+          <div class="col">
+            <div class="section-header d-flex justify-content-md-center flex-md-row flex-column align-content-center mb-4">
+                <h2 class="main-text shaded-right red roboto-condensed-medium d-flex align-items-md-center justify-content-md-end align-items-center justify-content-center about-title mb-sm-0" data-text="About">About</h2>
+                <div class="border mx-md-4 my-md-0 my-3"></div>
+                <div class="about-subtext d-flex justify-content-start align-items-center">
+                    <p class="white mb-0 mt-md-3 roboto-condensed-regular text-center text-md-start">
+                        A premier provider of concrete services for the entire Medford and South Jersey area. Dedicated to customer satisfaction from start to finish as well as quality workmanship at reasonable prices. Preforming concrete projects in:  Medford, Cherry Hill, Marlton, Haddonfield, Moorestown, Mt. Laurel, Voorhees and surrounding areas. 
+                    </p>
+                </div>
+              </div>
+          </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-lg-6 col-md-8 offset-lg-6 offset-md-4 col-6 offset-6 mobile-full">
+          <h3 class="roboto-condensed-medium red about-subtitle">
+            Services include: 
+          </h3>
+          <ul class="about-list two-col white">
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrete driveways</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrete patios</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrete sidewalks</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrete floors</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">EP Henry brick pavers</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">EP Henry retaining walls</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrte steps</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrete pool decks</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">exotic concrete finishes</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">hardscaping</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">power washing</li>
+            <li class="d-flex align-items-center"><img class="star-icon mx-2" src="res/images/starIcon.svg">concrete restoration and repairs</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col">
+          <div class="section-footer d-flex justify-content-md-center flex-md-row flex-column align-content-center mb-4">
+            <div class="section-footer-left">
+              <p class="roboto-condensed-regular title-text white d-flex align-items-center justify-content-md-end justify-content-center mb-0">CALL US FOR A QUOTE</p>
+              <h2 class="main-text shaded-right red roboto-condensed-medium d-flex align-items-center justify-content-md-end justify-content-center about-footer-phone" data-text="609.864.3888">609.864.3888</h2>
+              <p class="roboto-condensed-regular title-text white d-flex align-items-center justify-content-md-end justify-content-center mb-0">START YOUR NEXT PROJECT TODAY</p>
+            </div>
+            <div class="border mx-md-4 my-3"></div>
+            <div class="about-subtext d-flex justify-content-start align-items-center">
+                <p class="white mb-0 mt-0 roboto-condensed-regular text-center text-md-start">
+                    A premier provider of concrete services for the entire Medford and South Jersey area. Dedicated to customer satisfaction from start to finish as well as quality workmanship at reasonable prices. Preforming concrete projects in:  Medford, Cherry Hill, Marlton, Haddonfield, Moorestown, Mt. Laurel, Voorhees and surrounding areas. 
+                </p>
+            </div>
+          </div>
+      </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact Us Section -->
+  <div class="contact-section">
+    <div class="container">  
+     <div class="row">
+      <div class="col-md-6 col-sm-12">
+        
+      <form class="contact-form">
+        <div class="row">
+          <div class="col-sm-9 offset-sm-3">
+            <h2 class="mx-sm-2 sub-text shaded white roboto-condensed-medium" data-text="Contact Us">Contact Us</h2>
+          </div>
+        </div>
+          <div class="input-group d-flex align-items-center py-2 w-100">
+              <label class="d-sm-flex justify-content-sm-end mx-sm-2 w-25" for="name">Name</label>
+              <input type="text" class="form-control rounded-0" id="name" placeholder="Your Name">
+          </div>
+          <div class="input-group d-flex align-items-center py-2 w-100">
+              <label class="d-sm-flex justify-content-sm-end mx-sm-2 w-25" for="email">Email</label>
+              <input type="email" class="form-control rounded-0" id="email" placeholder="Your Email">
+          </div>
+          <div class="input-group d-flex align-items-center py-2 w-100">
+              <label class="d-sm-flex justify-content-sm-end mx-sm-2 w-25" for="phone">Phone</label>
+              <input type="tel" class="form-control rounded-0" id="phone" placeholder="Your Phone">
+          </div>
+          <div class="input-group d-flex align-items-center py-2 w-100">
+              <label class="d-sm-flex justify-content-sm-end mx-sm-2 w-25" for="message">Message</label>
+              <textarea class="form-control rounded-0" id="message" rows="4" placeholder="Your Message"></textarea>
+          </div>
+          <div class="input-group d-flex align-items-center py-2 w-100">
+            <label class="d-sm-flex justify-content-sm-end mx-sm-2 w-25" for="submit-button"></label>
+            <button id="submit-button" type="submit" class="btn btn-danger rounded-0">SEND</button>
+        </div>
+          
+      </form>
+      </div>
+      <div class="col-md-6 col-sm-12 py-md-5">
+        <div class="contact-aside d-flex flex-column justify-content-center">
+          <p class="normal-text text-center text-uppercase roboto-condensed-regular mb-0">J.D. James Construction</p>
+          <p class="normal-text text-center text-uppercase roboto-condensed-regular mb-2">MEDFORD N.J. 08055</p>
+          <img class="map-pin mb-5" src="res/images/mapPin.svg" >
+          <h2 class="main-text shaded white roboto-condensed-medium text-center mt-4" data-text="609.864.3888">609.864.3888</h2>
+          <p class="normal-text text-uppercase text-center roboto-condensed-regular">Let us help you get started today</p>
+        </div>
+      </div>
+     </div>
+    </div>
+  </div>
+
+  <!-- Footer Section -->
+  <div class="footer-section">
+      <p class="m-1">J.D. James Construction. 2014. All Rights Reserved. Custom website designed by MilesTechnologies.com. Sitemap.</p>
+  </div>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="bootstrap/js/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
