--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <img src="res/images/vedistryusa.jpg" alt="Vedistry">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Vedistry USA</h5>
-                                <a href="https://www.vedistry.com/" target="_blank" class="btn btn-primary">Visit Website</a>
+                                <a href="https://www.vedistryusa.com/" target="_blank" class="btn btn-primary">Visit Website</a>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                         <div class="card portfolio-item">
                             <img src="res/images/dfactory.jpg" alt="Vedistry">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Vedistry USA</h5>
+                                <h5 class="card-title">Dfactory</h5>
                                 <a href="https://dfactory.org/" target="_blank" class="btn btn-primary">Visit Website</a>
                             </div>
                         </div>
